# fractal-explorer

./: CODEOWNERS  Cargo.toml  LICENSE  README.md  build.rs  index.html
pkg/: fractal.d.ts  fractal.js  fractal_bg.wasm.d.ts  package.json
src/: fractals.rs  main.rs  point.rs  rational.rs  singlecache.rs  viewport.rs
ui/: about-fractal.slint  iteration-slider.slint  main-window.slint  resizeable-image.slint  view-area.slint
