[package]
name = "fractal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.0"
slint = "1.4.1"
rand = "0.8.5"
color-rs = "0.8.0"
num-traits = "0.2.18"
webbrowser = "0.8.13"

[build-dependencies]
slint-build = "1.4.0"

[lib]
path = "src/main.rs"
crate-type = ["cdylib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
getrandom = { version = "0.2.2", features = ["js"] }
